--- a/.gitignore
+++ b/.gitignore
@@ -248,3 +248,16 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,linux,macos,python
+
+# Report latex stuff
+Report/main.pdf
+Report/main.aux
+Report/main.bbl
+Report/main.bcf
+Report/main.blg
+Report/main.fdb_latexmk
+Report/main.fls
+Report/main.run.xml
+Report/main.synctex.gz
+Report/main.toc
+Report/main.out
