Updated gitignore to ignore the aux file in Report/Covers

--- a/.gitignore
+++ b/.gitignore
@@ -249,7 +249,7 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,linux,macos,python
 
-# Report latex stuff
+# Report latex stuff, the only thing we need version control on is main.tex
 Report/main.pdf
 Report/main.aux
 Report/main.bbl
@@ -261,4 +261,4 @@ Report/main.run.xml
 Report/main.synctex.gz
 Report/main.toc
 Report/main.out
-Report/Covers/00-Cover.aux
+Report/Covers/*.aux
