Edited testenv name for tests in tox.ini and edited the run tox for tests command in the yaml file

--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -33,4 +33,4 @@ jobs:
         run: tox -e format
 
       - name: Run tox for tests
-        run: tox --skip-env format
+        run: tox -e tests
