--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ env_list =
     format
 minversion = 4.33.0
 
-[testenv:base]
+[testenv:tests]
 description = run the tests with pytest
 package = wheel
 wheel_build_env = .pkg
