Fixed silly typo in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ deps =
     pytest>=6
     pytest
     pytest-cov
-    -r requirement.txt
+    -r requirements.txt
 commands =
     pytest --cov=Simulation tests/*.py
 
