--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ deps =
     pytest-cov
     -r requirements.txt
 commands =
-    pytest --cov=Simulation tests/*.py
+    pytest --cov=Simulation tests
 
 [testenv:format]
 description = run flake8 format tests
