Updated gitignore and removed useless file

--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,6 @@ Report/main.synctex.gz
 Report/main.toc
 Report/main.out
 Report/Covers/*.aux
+
+# Stuff we notice that we don't want in the repository
+.python-version
