Updated tox.ini to make sure pytest covers the new Geometry package as well

--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ deps =
     pytest-cov
     -r requirements.txt
 commands =
-    pytest --cov=Simulation tests
+    pytest --cov=Simulation --cov=Geometry tests
 
 [testenv:format]
 description = run flake8 format tests
