Added InputOutput coverage to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ deps =
     pytest-cov
     -r requirements.txt
 commands =
-    pytest --cov=Simulation --cov=Geometry tests
+    pytest --cov=Simulation --cov=Geometry tests --cov=InputOutput
 
 [testenv:format]
 description = run flake8 format tests
