Updated pyproject.toml to include tests in the package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,6 @@ dependencies = []
 [project.urls]
 Homepage = "https://github.com/Suilerac/INF202---Group-18"
 Issues = "https://github.com/Suilerac/INF202---Group-18/issues"
+
+[tool.setuptools.data-files]
+"tests" = ["tests/*"]
