--- a/configs/default.toml
+++ b/configs/default.toml
@@ -7,5 +7,5 @@ meshName = "meshes/bay.msh"
 borders = [[0.0, 0.45], [0.0, 0.2]]
 
 [IO]
-logName = "test.log"
+logName = "default.log"
 writeFrequency = 20
